# blogsimi

./: README.md  pyproject.toml
src/: .gitignore
src/blogsimi/: __init__.py  __main__.py  cli.py  core.py
